--- a/entries/templates/entries/base.html
+++ b/entries/templates/entries/base.html
@@ -38,6 +38,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+          </li>
         </ul>
       </div>
     </div>
