--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -11,7 +11,7 @@
             <form method="POST">
                 {% csrf_token %}
                 {{form.as_p}}
-                <button type="submit" class="btn btn-primary">Create Account</button>
+                <button type="submit" class="btn btn-primary" href="{% url 'blog-home' %}">Create Account</button>
             </form>
         </div>
     </div>
